Kubernetes/rproxy-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: rproxy
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: rproxy
    spec:
      containers:
      - image: dkassab/calc-go-rproxy-image:latest
        name: rproxy
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
