Kubernetes/rproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: rproxy
  name: rproxy
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    service: rproxy
status:
  loadBalancer: {}
