Kubernetes/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: server
  name: server
spec:
  ports:
  - name: "33333"
    port: 33333
    targetPort: 33333
  selector:
    service: server
status:
  loadBalancer: {}
